# graphics-problems

./: .gitmodules  CMakeLists.txt  CMakePresets.json  Folder.DotSettings
antialiasing/: CMakeLists.txt
antialiasing/Shaders/: Gourand.vert  ScreenQuad.vert  fxaa.frag
antialiasing/Sources/: main.cpp
experiment/: CMakeLists.txt
experiment/Shaders/: background.fs  background.vs  background_old.fs  background_old.vs
experiment/Sources/: main.cpp
malevich/: CMakeLists.txt
malevich/Sources/: main.cpp  utils.cpp  utils.h
malevich/tests/: CMakeLists.txt  malevich_test.cpp  test_paths.h.in
problem1/: CMakeLists.txt  camera_test.cpp
problem1/Shaders/: shader.fs  shader.vs
problem1/Sources/: ArrayBuffer.cpp  ArrayBuffer.h  GeometryObject.cpp  GeometryObject.h  MovableHandle.h  UserContext.cpp  UserContext.h  VertexArray.cpp  VertexArray.h  camera.cpp  camera.h  camera_test.cpp  main.cpp  math_util.cpp  math_util.h
problem2/: CMakeLists.txt
problem2/Shaders/: shader.vs
problem2/Sources/: IndexTriangle.cpp  IndexTriangle.h  TriangleCalculator.cpp  helper.cpp  helper.h  main.cpp  tesselate.cpp  tesselate.h  tesselate_test.cpp
problem3/: CMakeLists.txt
problem3/Shaders/: shader.fs  shader.vs
problem3/Sources/: main.cpp
problem5/: CMakeLists.txt
problem5/Shaders/: GourandBlinn.vert  Phong.frag  lightSourceShader.fs  shader.frag
problem5/Sources/: main.cpp
save_picture/: CMakeLists.txt
save_picture/Sources/: main.cpp  utils.cpp  utils.h
save_picture/tests/: CMakeLists.txt  SnapshotChecker.cpp  SnapshotChecker.h  hello_test.cc
smaa/: CMakeLists.txt
smaa/Shaders/: GourandBlinn.vert  SMAA.h  SMAABlendingWeightCalculation.frag  SMAABlendingWeightCalculation.vert  SMAABlendingWeightCalculationInclude.frag  SMAABlendingWeightCalculationInclude.vert  SMAAEdgeDetection.vert  SMAAEdgeDetectionInclude.frag  SMAAEdgeDetectionInclude.vert  SMAALumaEdgeDetection.frag  ScreenQuad.vert
smaa/Sources/: SMAA.glsl  main.cpp  utils.cpp
testing_tool/: CMakeLists.txt  Image.cpp  Image.h  ImageDimensions.h  SnapshotChecker.cpp  SnapshotChecker.h
testing_tool/tests/: CMakeLists.txt  testing_tool_test.cpp
transparency/: CMakeLists.txt
transparency/Shaders/: Gourand.frag  GourandBlinn.vert  Phong.vert  ScreenQuad.frag
transparency/Sources/: depth_peeling.cpp  depth_peeling.h  main.cpp  utils.cpp  utils.h
utils/: ArrayBuffer.cpp  ArrayBuffer.h  CMakeLists.txt  Color.cpp  Color.h  DrawData.h  Framebuffer.cpp  Framebuffer.h  GeometryObject.cpp  GeometryObject.h  Image.cpp  Image.h  ImageDimensions.h  IndexTriangle.cpp  IndexedVertices.cpp  IndexedVertices.h  Light.h  Material.h  Mesh.cpp  Mesh.h  MeshBuilding.cpp  MeshBuilding.h  MovableHandle.cpp  MovableHandle.h  ScreenSize.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgramGuard.cpp  ShaderProgramGuard.h  Texture.cpp  Texture.h  TriangleCalculator.h  UserContext.cpp  UserContext.h  Vertex.cpp  Vertex.h  VertexArray.cpp  VertexArray.h  (+27 more)
