add_library(
utils

"camera.cpp"
"camera.h"
"ArrayBuffer.cpp"
"ArrayBuffer.h"
"VertexArray.cpp"
"MovableHandle.cpp"
"math_util.cpp"
"ShaderProgram.cpp"
"Shader.cpp"
"ShaderProgramGuard.cpp"
"Color.cpp"
"Vertex.h"
"Vertex.cpp"
"GeometryObject.cpp"
"UserContext.cpp"
"conversion.h"
"gldebug.cpp"
"Mesh.h"
"Mesh.cpp"
"IndexTriangle.h"
"IndexTriangle.cpp"
)

if(GRAPHICS_PROBLEMS_BUILD_TESTS)
	add_executable(
	  camera_test
	  camera_test.cpp
	)
	target_link_libraries(
	  camera_test
	  utils
	  GTest::gtest_main
	)

	include(GoogleTest)
	gtest_discover_tests(camera_test)
endif()